# torch-mapping

./: pyproject.toml
mapping/: __init__.py  mapping.py
tests/: __init__.py  test_mapping.py
