[tool.poetry]
name = "torch-mapping"
version = "0.0.1"
description = "A package to simplify the implementation of MPNN in pytorch"
authors = ["Astrid Klipfel <astridklipfel@gmail.com>"]
readme = "README.md"

packages = [{ include = "mapping" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
torch = "2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "*"
flake8 = "^7"
flake8-cognitive-complexity = "*"
pylint = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
